crates/xlate/tests/snapshots/golden_matrix__media_image_https_detail__gpt-4o-mini__20260910__chat_to_responses__gpt5_responses.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "One word."
        },
        {
          "type": "input_image",
          "image_url": "https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/PNG_transparency_demonstration_1.png/280px-PNG_transparency_demonstration_1.png"
        }
      ]
    }
  ],
  "max_output_tokens": 64
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
ext.chat.image_detail=dropped
